--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -35,9 +35,11 @@ crossbeam-channel = "0.5"
 enum_dispatch = "0.3"
 
 tokio = {version="1", optional=true, features=["rt"]}
+rust_icu_ucol = {version="1.0", optional=true}
 
 [features]
 partially-static = ["media_info/partially-static"]
 static = ["media_info/static"]
 async = ["tokio"]
 symlinks = []
+collation = ["rust_icu_ucol"]
