--- a/Dockerfile.static
+++ b/Dockerfile.static
@@ -6,7 +6,7 @@ ENV FEATURES=""
 RUN apk update &&\
     apk upgrade &&\
     apk add git bash curl yasm build-base openssl-dev openssl-libs-static\
-    wget zlib-dev zlib-static bzip2-static bzip2-dev rustup npm &&\
+    wget zlib-dev zlib-static bzip2-static bzip2-dev rustup npm clang-static icu-static perl &&\
     rustup-init -y &&\
     chmod -R 0777 /root &&\
     mkdir /src &&\
