--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ tokio-native-tls = {version="0.3", optional=true}
 native-tls = {version="0.2", optional=true}
 
 leaky-cauldron = {path="crates/leaky-cauldron"}
-tokio-util = {version="0.6", optional=true}
+tokio-util = {version="0.6", optional=true, features=["codec"]}
 cron = {version="0.9", optional=true}
 chrono = {version="0.4", optional=true}
 
