Make alternate encoding of tags optional feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ partially-static = ["collection/partially-static"]
 static = ["collection/static"]
 collation = ["collection/collation"]
 collation-static = ["collection/collation-static"]
+tags-encoding = ["collection/tags-encoding"]
 
 
 
