--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -44,3 +44,4 @@ async = ["tokio"]
 symlinks = []
 collation = ["rust_icu_ucol/use-bindgen", "rust_icu_ucol/icu_config"]
 collation-static = ["rust_icu_ucol/renaming", "rust_icu_ucol/icu_version_in_env"]
+tags-encoding = ["media_info/alternate-encoding"]
