--- a/.github/workflows/build_experimental_image.yml
+++ b/.github/workflows/build_experimental_image.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build image
-      run: docker build --tag izderadicka/audioserve:experimental --build-arg NEW_CLIENT=1 --build-arg CARGO_ARGS="--features=collation" --build-arg CARGO_RELEASE= .
+      run: docker build --tag izderadicka/audioserve:experimental --build-arg NEW_CLIENT=1 --build-arg CARGO_ARGS="--features=transcoding-cache" --build-arg CARGO_RELEASE= .
     - name: Publish image
       run: |
         docker login -u ${{secrets.DOCKERHUB_USER}} -p ${{secrets.DOCKERHUB_PASSWORD}}
