--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 members = ["crates/*"]
 
 [dependencies]
+# to assure minimum version of rustc still to be at least 1.52
+indexmap = "=1.8.2"
+hashbrown = "=0.11.2"
+
 bytes = "1.0"
 env_logger = "0.9"
 log = {version="0.4", features = ["release_max_level_info", "max_level_trace"]}
