--- a/crates/cachedirtree/Cargo.toml
+++ b/crates/cachedirtree/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "cachedirtree"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
+edition = "2021"
 
 [dependencies]
 ego-tree="0.6"
 bit-vec = "0.6"
 notify = "4.0"
-derive_builder = "0.10"
+derive_builder = "0.11"
 
 
 [dependencies.log]
