--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "collection"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -18,12 +18,11 @@ anyhow = "1.0"
 media_info = {path="../media_info"}
 sled = {version="0.34", features=["compression"]}
 thiserror = "1.0"
-serde = "1.0"
-serde_derive = "1.0"
+serde = {version="1.0", features=["derive"]}
 serde_json = "1.0"
 lazy_static = "1.4"
 log="0.4"
-regex = "1.5"
+regex = "1.6"
 csv = "1.1"
 mime_guess = "2.0"
 unicase = "2.6"
