--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,6 @@ lto = true
 codegen-units = 1
 
 [dev-dependencies]
-reqwest = {version="0.11", features=['blocking', 'json']}
+reqwest = {version="0.11", features=['blocking', 'json'], default-features = false}
 escargot = "0.5" 
 tempdir = "0.3"
