--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ headers = "0.3"
 futures = "0.3"
 mime = "0.3"
 serde_json = "1.0"
-serde = "1.0"
-serde_derive = "1.0"
+serde = {version="1.0", features=["derive"]}
 serde_yaml = "0.8"
 clap = "2"
 lazy_static = "1.4"
