--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ dirs = "4.0"
 csv = "1.1"
 linked-hash-map = {git="https://github.com/izderadicka/linked-hash-map.git", version="0.5.3", features=["serde_impl"]}
 
+image="0.24"
+
 # for tls
 rustls ={version="0.20", optional=true}
 tokio-rustls = { version="0.23", optional=true, default-features = false}
