Implement cache for scaled icons

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "audioserve"
-version = "0.20.0"
+version = "0.21.0"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 edition = "2018"
 
@@ -52,7 +52,7 @@ chrono = {version="0.4", optional=true}
 # this repo dependencies
 collection = {path="crates/collection", features=["async"]}
 proxy-headers = {path="crates/proxy-headers", optional=true}
-simple-file-cache = {path="crates/file-cache", features=["asynch"], optional=true }
+simple-file-cache = {path="crates/file-cache", features=["asynch"]}
 async-tar = {path="crates/async-tar", optional=true}
 async-zip = {path="crates/async-zip", optional=true}
 websock = {path="crates/websock", optional = true}
@@ -71,7 +71,7 @@ folder-download-default-tar =[]
 shared-positions = ["websock", "cron", "chrono"]
 behind-proxy = ["proxy-headers"]
 # non-default
-transcoding-cache=["simple-file-cache", "tokio-util"]
+transcoding-cache=["tokio-util"]
 # for static compilation only
 partially-static = ["collection/partially-static"]
 static = ["collection/static"]
