media-info: configurable build
according to available ffmpeg version

--- a/crates/media_info/Cargo.toml
+++ b/crates/media_info/Cargo.toml
@@ -12,6 +12,9 @@ encoding = {version="0.2", optional=true}
 [dev-dependencies]
 clap ={version="4", features=["derive"]}
 
+[build-dependencies]
+pkg-config="0.3"
+
 [features]
 static=[]
 partially-static=[]
