--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ mime = "0.3"
 serde_json = "1.0"
 serde = {version="1.0", features=["derive"]}
 serde_yaml = "0.9"
-clap = {version="4", features=["cargo", "env", "derive"]}
+clap = {version="4", features=["cargo", "env"]}
 lazy_static = "1.4"
 thiserror = "1.0"
 anyhow = "1.0"
