--- a/crates/leaky-cauldron/Cargo.toml
+++ b/crates/leaky-cauldron/Cargo.toml
@@ -1,16 +1,12 @@
 [package]
 name = "leaky-cauldron"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio={version="1.20", features=["rt-multi-thread", "time", "sync"]}
-futures="0.3"
-log="0.4"
 
 [dev-dependencies]
-tokio={version="1.20", features=["macros", "test-util"]}
-env_logger = "0.10"
+tokio={version="1.20", features=["macros", "test-util", "rt-multi-thread"]}
