Fix rustls dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,6 @@ csv = "1.2"
 image="0.24"
 
 # for tls
-rustls ={version="0.21", optional=true}
 tokio-rustls = { version="0.23", optional=true, default-features = false}
 futures-util = { version = "0.3", default-features = false, optional=true }
 rustls-pemfile = { version = "1", optional=true}
@@ -63,7 +62,7 @@ nix = "0.26"
 [features]
 default = ["tls", "symlinks", "folder-download", "shared-positions", "behind-proxy"]
 # default
-tls=["rustls", "tokio-rustls", "futures-util", "rustls-pemfile"]
+tls=["tokio-rustls", "futures-util", "rustls-pemfile"]
 symlinks=["collection/symlinks"]
 
 folder-download = ["async-tar", "async-zip"]
