--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dev_dependencies]
+[dev-dependencies]
 serde_json ="1.0"
 env_logger = "0.10"
 tempdir = "0.3"
@@ -35,6 +35,7 @@ enum_dispatch = "0.3"
 
 tokio = {version="1", optional=true, features=["rt"]}
 rust_icu_ucol = {version="2.0", default-features=false, features=["renaming"], optional=true}
+indexmap = "2.0.0"
 
 [features]
 partially-static = ["media_info/partially-static"]
