--- a/.github/workflows/rust_check.yml
+++ b/.github/workflows/rust_check.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: Swatinem/rust-cache@v2
-    - name: Check formattig
+    - name: Check formatting
       run: |
         rustfmt --version
         cargo fmt --all -- --check
