--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,8 @@ simple-file-cache = {path="crates/file-cache", features=["asynch"]}
 async-tar = {path="crates/async-tar", optional=true}
 async-zip = {path="crates/async-zip", optional=true}
 websock = {path="crates/websock", optional = true}
+brotli = "3.3.4"
+http = "0.2.9"
 
 [target.'cfg(unix)'.dependencies]
 nix = {version="0.27.1", features=["user"]}
