--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ async-zip = {path="crates/async-zip", optional=true}
 websock = {path="crates/websock", optional = true}
 brotli = "3.3.4"
 http = "0.2.9"
+flate2 = "1.0.27"
 
 [target.'cfg(unix)'.dependencies]
 nix = {version="0.27.1", features=["user"]}
