--- a/crates/websock/Cargo.toml
+++ b/crates/websock/Cargo.toml
@@ -6,15 +6,17 @@ edition = "2018"
 
 [dependencies]
 
-hyper = {version="0.14", features=["deprecated"]}
+hyper = {version="1.0.1", features=[]}
 tokio = {version="1.34", features=["rt-multi-thread", "time"]}
 futures = "0.3"
 log = "0.4"
 tokio-tungstenite = "0.20"
 thiserror = "1.0"
-headers = "0.3"
+headers = "0.4.0"
+http-body-util = "0.1.0"
+hyper-util = { version = "0.1.1", features = ["tokio"] }
 
 [dev-dependencies]
 env_logger = "0.10"
-hyper = {version="0.14", features=["server", "http1", "http2", "tcp"]}
-tokio = {version="1.34", features=["macros", "io-util", "fs"]}
+hyper = {version="1.0.1", features=["server", "http1", "http2", "server"]}
+tokio = {version="1.34", features=["macros", "io-util", "fs", "net"]}
