--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,6 @@ csv = "1.3"
 
 image="0.24"
 
-# for tls
-tokio-rustls = { version="0.24", optional=true, default-features = false}
-futures-util = { version = "0.3", default-features = false, optional=true }
-rustls-pemfile = { version = "1", optional=true}
-
 leaky-cauldron = {path="crates/leaky-cauldron"}
 tokio-util = {version="0.7", optional=true, features=["codec"]}
 cron = {version="0.12", optional=true}
@@ -60,7 +55,7 @@ nix = {version="0.27.1", features=["user"]}
 [features]
 default = ["tls", "symlinks", "folder-download", "shared-positions", "behind-proxy"]
 # default
-tls=["tokio-rustls", "futures-util", "rustls-pemfile"]
+tls=["myhy/tls"]
 symlinks=["collection/symlinks"]
 
 folder-download = ["async-tar", "async-zip"]
