--- a/crates/leaky-cauldron/Cargo.toml
+++ b/crates/leaky-cauldron/Cargo.toml
@@ -10,3 +10,8 @@ edition = "2021"
 
 [dev-dependencies]
 tokio={version="1.35", features=["macros", "test-util", "rt-multi-thread"]}
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "bench"
+harness = false
