Use ring eotj rustls

--- a/crates/myhy/Cargo.toml
+++ b/crates/myhy/Cargo.toml
@@ -29,7 +29,7 @@ flate2 = "1.0.28"
 futures-util = "0.3.30"
 
 # for tls
-tokio-rustls = { version="0.26", optional=true}
+tokio-rustls = { version="0.26", optional=true, default-features = false, features=["logging", "tls12", "ring"]}
 rustls-pemfile = { version = "2", optional=true}
 rustls-pki-types = {version="1", optional=true}
 
