--- a/renovate.json
+++ b/renovate.json
@@ -7,5 +7,11 @@
     "**/node_modules/**",
     "**/bower_components/**",
     "client/**"
+  ],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["patch"],
+      "automerge": true
+    }
   ]
 }
