Disable warnings as error for feature branches

--- a/.github/workflows/rust_check.yml
+++ b/.github/workflows/rust_check.yml
@@ -6,12 +6,14 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: "-Dwarnings"
 
 jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
+      - name: set warnings as errors for master
+        if: github.ref == 'refs/heads/master'
+        run: echo "RUSTFLAGS=-Dwarnings" >> $GITHUB_ENV
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - uses: Swatinem/rust-cache@v2
       - name: Check formatting
