--- a/.github/workflows/rust_check.yml
+++ b/.github/workflows/rust_check.yml
@@ -30,6 +30,8 @@ jobs:
           sudo apt-get install -y  openssl libssl-dev pkg-config ffmpeg yasm build-essential wget libbz2-dev zlib1g-dev libavformat-dev
       - name: Run unit tests
         run: cargo test --all --features transcoding-cache,tags-encoding
+      - name: Run integration tests
+        run: cargo test -- --ignored --nocapture test_binary
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate code coverage
