--- a/crates/async-zip/Cargo.toml
+++ b/crates/async-zip/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3"
-tokio = {version="1.37", features=["full"]}
+tokio = { version = "1.37", features = ["full"] }
 bytes = "1.6"
 chrono = "0.4"
-thiserror = "2.0"
+thiserror.workspace = true
 crc32fast = "1.4"
 
 [dev-dependencies]
-zip = {version="2.0.0", default-features=false}
+zip = { version = "2.0.0", default-features = false }
