--- a/crates/file-cache/Cargo.toml
+++ b/crates/file-cache/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 linked-hash-map = "0.5.6"
 rand = "0.8"
 data-encoding = "2.6"
-thiserror ="2.0"
+thiserror.workspace = true
 log = "0.4"
 byteorder = "1.5"
 
-tokio = { version="1.37", optional=true, features=[ "rt", "fs"] }
+tokio = { version = "1.37", optional = true, features = ["rt", "fs"] }
 
 
 [features]
@@ -20,7 +20,5 @@ asynch = ["tokio"]
 
 [dev-dependencies]
 env_logger = "0.11.3"
-tempfile ="3.10.1"
-tokio = { version="1.37", features=["io-util", "macros",] }
-
-
+tempfile = "3.10.1"
+tokio = { version = "1.37", features = ["io-util", "macros"] }
