--- a/docs/audioserve-api-v1.yaml
+++ b/docs/audioserve-api-v1.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.1
 info:
   title: audioserve API
   description: REST API for audioserve
-  version: 1.3.1
+  version: 1.3.2
 servers:
   - url: https://audioserve.zderadicka.eu
     description: Public demo server
@@ -1086,6 +1086,9 @@ components:
         shared_positions:
           type: boolean
           description: Is playback position API enabled on server?
+        rss_feed:
+          type: boolean
+          description: Is RSS feed endpoint enabled on server?
         version:
           type: string
           description: Version of audioserve (and thus also version of API)
