Upgrade thiserror to v2
commit e579402fd47357953681470ded0e1ac5400e1f82
Author: Ivan <ivan.zderadicka@gmail.com>
Date:   Mon Jan 20 09:21:52 2025 +0100

    Upgrade thiserror

commit 386915224b5a779744e17bc09ba818dab9ce5304
Author: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Date:   Sun Dec 29 20:23:28 2024 +0000

    fix(deps): update rust crate thiserror to v2

--- a/crates/media_info/Cargo.toml
+++ b/crates/media_info/Cargo.toml
@@ -6,17 +6,16 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-thiserror = "1.0"
-encoding = {version="0.2", optional=true}
+thiserror.workspace = true
+encoding = { version = "0.2", optional = true }
 
 [dev-dependencies]
-clap ={version="4", features=["derive"]}
+clap = { version = "4", features = ["derive"] }
 
 [build-dependencies]
-pkg-config="0.3.30"
+pkg-config = "0.3.30"
 
 [features]
-static=[]
-partially-static=[]
-alternate-encoding=["encoding"]
-
+static = []
+partially-static = []
+alternate-encoding = ["encoding"]
