--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ rust-version = "1.79"
 [workspace]
 members = ["crates/*"]
 
+[workspace.dependencies]
+thiserror = "2.0.11"
+
 [dependencies]
 
 bytes = "1.6"
@@ -23,7 +26,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 clap = { version = "4", features = ["cargo", "env"] }
 lazy_static = "1.4"
-thiserror = "1.0"
+thiserror.workspace = true
 anyhow = "1.0.82"
 url = "2.5"
 percent-encoding = "2.3"
