--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,7 +93,7 @@ reqwest = { version = "0.12.4", features = [
     'json',
 ], default-features = false }
 escargot = "0.5.10"
-tempdir = "0.3.7"
+tempfile = "3.16.0"
 http-body-util = "0.1.1"
 
 [target.'cfg(unix)'.dev-dependencies]
