--- a/.github/workflows/rust_check.yml
+++ b/.github/workflows/rust_check.yml
@@ -28,6 +28,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y  openssl libssl-dev pkg-config ffmpeg yasm build-essential wget libbz2-dev zlib1g-dev libavformat-dev
+      - name: Check ffmpeg versions
+        run: |
+          ffmpeg -version
+          pkg-config --modversion libavformat
       - name: Run unit tests
         run: cargo test --all --features transcoding-cache,tags-encoding
       - name: Run integration tests
