--- a/.github/workflows/rust_check.yml
+++ b/.github/workflows/rust_check.yml
@@ -10,10 +10,10 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
-      - uses: Swatinem/rust-cache@v2
+      # - uses: Swatinem/rust-cache@v2
       - name: Check formatting
         run: |
           rustfmt --version
