--- a/.github/workflows/rust_check.yml
+++ b/.github/workflows/rust_check.yml
@@ -18,12 +18,6 @@ jobs:
         run: |
           rustfmt --version
           cargo fmt --all -- --check
-      - name: Check compilation
-        run: |
-          rustc --version
-          cargo check --all --features transcoding-cache,tags-encoding
-      - name: Clippy check
-        run: cargo clippy --all --features transcoding-cache,tags-encoding
       - name: Install build dependencies
         run: |
           sudo apt-get update
@@ -32,6 +26,13 @@ jobs:
         run: |
           ffmpeg -version
           pkg-config --modversion libavformat
+          PKG_CONFIG_ALLOW_SYSTEM_LIBS=1 PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags libavformat
+      - name: Check compilation
+        run: |
+          rustc --version
+          cargo check --all --features transcoding-cache,tags-encoding
+      - name: Clippy check
+        run: cargo clippy --all --features transcoding-cache,tags-encoding
       - name: Run unit tests
         run: cargo test --all --features transcoding-cache,tags-encoding
       - name: Run integration tests
